[gd_scene load_steps=15 format=4 uid="uid://lkpsbidqpdaj"]

[ext_resource type="PackedScene" uid="uid://3fyim0l6np62" path="res://scenes/player.tscn" id="1_s1vaj"]
[ext_resource type="Script" uid="uid://bp7kfagjhiq1i" path="res://scripts/world.gd" id="1_x4b8f"]
[ext_resource type="PackedScene" uid="uid://prvka07hwoo5" path="res://scenes/levels/level_1.tscn" id="2_dw7u0"]
[ext_resource type="TileSet" uid="uid://bv0bpu6b43rtq" path="res://main_tileset.tres" id="2_t280y"]
[ext_resource type="Script" uid="uid://bmk2gp64om3wm" path="res://scripts/main_camera.gd" id="3_tmr53"]
[ext_resource type="PackedScene" uid="uid://187rks4e0yiv" path="res://scenes/death_zone.tscn" id="3_us6iy"]
[ext_resource type="Texture2D" uid="uid://c2ytyvlffsw63" path="res://assets/Tilemap/monochrome_tilemap_transparent.png" id="6_4asn1"]
[ext_resource type="PackedScene" uid="uid://d0timolxnxctk" path="res://scenes/main_canvas.tscn" id="6_7gix3"]
[ext_resource type="PackedScene" uid="uid://bkvv070cdyxwl" path="res://scenes/trap.tscn" id="7_88ety"]
[ext_resource type="PackedScene" uid="uid://cvmby0u3nagsh" path="res://scenes/collectible.tscn" id="8_ahbqi"]
[ext_resource type="PackedScene" uid="uid://t7tc0nqgm8aj" path="res://scenes/doors.tscn" id="9_7gix3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_dw7u0"]
atlas = ExtResource("6_4asn1")
region = Rect2(118, 238, 34, 34)

[sub_resource type="AtlasTexture" id="AtlasTexture_fyxdr"]
atlas = ExtResource("6_4asn1")
region = Rect2(118, 272, 34, 34)

[sub_resource type="SpriteFrames" id="SpriteFrames_5wy4h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dw7u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fyxdr")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[node name="testLevel" type="Node2D"]
script = ExtResource("1_x4b8f")
next_level = ExtResource("2_dw7u0")

[node name="player" parent="." instance=ExtResource("1_s1vaj")]
position = Vector2(-249, -13)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)
script = ExtResource("3_tmr53")

[node name="Visible" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AADx/wUAAAAMAA4AAADx/wQAAAAMAA4AAADx/wMAAAAMAA4AAADx/wIAAAAMAA4AAADx/wEAAAAMAA4AAADx/wAAAAAMAA0AAADw/wEAAAALAA4AAADw/wAAAAALAA0AAADv/wAAAAALAA0AAADu/wAAAAALAA0AAADt/wAAAAALAA0AAADs/wUAAAAKAA4AAADs/wQAAAAKAA4AAADs/wMAAAAKAA4AAADs/wIAAAAKAA4AAADs/wEAAAAKAA4AAADs/wAAAAAKAA0AAADx/w0AAAAMAA8AAADx/wwAAAAMAA4AAADx/wsAAAALAA4AAADx/woAAAALAA4AAADx/wkAAAALAA4AAADx/wgAAAAMAA4AAADx/wcAAAAMAA4AAADx/wYAAAAMAA4AAADw/w0AAAALAA8AAADv/w0AAAALAA8AAADv/wcAAAALAA4AAADu/w0AAAALAA8AAADs/wYAAAAKAA4AAADy////AAAKAA0AAADy/wAAAAAKAA4AAADy/wEAAAAKAA4AAADy/wIAAAAKAA4AAADy/wMAAAAKAA4AAADy/wQAAAAKAA4AAADy/wUAAAAKAA4AAADy/wYAAAAKAA4AAADy/wcAAAAKAA4AAADy/wgAAAAKAA4AAADy/wkAAAAKAA4AAADy/woAAAAKAA4AAADz////AAALAA0AAAD0/wYAAAAMAA4AAAD0/wUAAAAMAA4AAAD0/wQAAAAMAA4AAAD0/wMAAAAMAA4AAAD0/wIAAAAMAA4AAAD0/wEAAAAMAA4AAAD0/wAAAAAMAA4AAAD0////AAAMAA0AAAD0/wsAAAAMAA8AAAD0/woAAAAMAA4AAAD0/wkAAAAMAA4AAAD0/wgAAAAMAA4AAAD0/wcAAAAMAA4AAADz/wsAAAALAA8AAADz/woAAAALAA4AAADz/wkAAAALAA4AAADy/wsAAAALAA8AAADz/wEAAAALAA4AAAARAPn/AAARAAsAAAARAPj/AAARAAoAAAARAPf/AAARAAoAAAARAPb/AAARAAkAAAAQAPn/AAAQAAsAAAAQAPb/AAAQAAkAAAAPAPn/AAAPAAsAAAAPAPb/AAAQAAkAAAAOAPn/AAAQAAoAAAAOAPb/AAAQAAkAAAANAPb/AAAQAAkAAAAMAPb/AAAQAAkAAAALAPn/AAAQAAoAAAALAPb/AAAQAAkAAAAKAPn/AAAPAAsAAAAKAPb/AAAQAAkAAAAJAPn/AAAQAAsAAAAJAPb/AAAPAAkAAAAIAPn/AAAQAAoAAAAIAPb/AAAQAAkAAAAHAPb/AAAQAAkAAAAGAPn/AAAQAAoAAAAGAPb/AAAPAAkAAAAFAPn/AAAQAAkAAAAFAPb/AAAQAAkAAAAEAPn/AAAQAAkAAAAEAPb/AAAQAAkAAAADAPn/AAAPAAkAAAADAPb/AAAPAAkAAAACAPb/AAAQAAkAAAABAPb/AAAQAAkAAAAAAPn/AAARAAoAAAAAAPb/AAAQAAkAAAD///b/AAAQAAkAAAD+//b/AAAQAAkAAAD9//b/AAAQAAkAAAD8//b/AAAQAAkAAAD7//n/AAARAAsAAAD6//n/AAAQAAsAAAD6//b/AAARAAsAAAD5//n/AAAQAAsAAAD5//b/AAARAAkAAAD4//n/AAAQAAsAAAD4//b/AAAQAAkAAAD3//n/AAAQAAsAAAD3//b/AAAQAAkAAAD2//n/AAAQAAsAAAD2//b/AAAQAAkAAAD1//b/AAAPAAkAAAD0//n/AAAQAAoAAAD0//b/AAAQAAkAAADz//b/AAAQAAkAAADy//b/AAAQAAkAAADx//b/AAAQAAkAAADw//n/AAAQAAoAAADw//b/AAAQAAkAAADv//n/AAARAAsAAADv//b/AAAQAAkAAADu//n/AAAPAAsAAADu//j/AAAPAAoAAADu//f/AAAPAAoAAADu//b/AAAPAAkAAAD0//r/AAARAAsAAAD0//f/AAAQAAoAAADz//r/AAAQAAsAAADy//r/AAAQAAsAAADx//r/AAAQAAsAAADw//r/AAAPAAsAAADw//j/AAAQAAoAAAAAAPv/AAARAAsAAAAAAPr/AAARAAoAAAAAAPj/AAARAAoAAAD///v/AAAQAAsAAAD///r/AAAQAAoAAAD+//v/AAAQAAsAAAD+//r/AAAQAAoAAAD9//v/AAAQAAsAAAD9//r/AAAQAAoAAAD8//v/AAAPAAsAAAD8//r/AAAPAAoAAAAAAPf/AAAQAAoAAAD7//b/AAAQAAkAAAD7//f/AAAPAAoAAAAIAPr/AAARAAsAAAAHAPr/AAAQAAsAAAAGAPr/AAAQAAsAAAAGAPj/AAAPAAoAAAAGAPf/AAAPAAoAAAAFAPr/AAAQAAsAAAAEAPr/AAAQAAsAAAADAPr/AAAPAAsAAAAJAPj/AAARAAkAAAACAPf/AAARAAsAAAABAPf/AAAQAAsAAAAOAP3/AAARAAsAAAAOAPz/AAARAAoAAAAOAPv/AAARAAoAAAAOAPr/AAARAAoAAAAOAPj/AAAQAAkAAAANAP3/AAAQAAsAAAANAPz/AAAQAAoAAAAMAP3/AAAQAAsAAAAMAPz/AAAQAAoAAAALAP3/AAAPAAsAAAALAPz/AAAPAAoAAAALAPv/AAAPAAoAAAALAPr/AAAPAAoAAADr/woAAAARAAsAAADr/wkAAAARAAoAAADr/wgAAAARAAoAAADr/wcAAAARAAoAAADr/wYAAAARAAoAAADr/wUAAAARAAoAAADr/wQAAAARAAoAAADr/wMAAAARAAoAAADr/wIAAAARAAoAAADr/wEAAAARAAoAAADr/wAAAAARAAoAAADr////AAARAAoAAADr//7/AAARAAoAAADr//3/AAARAAoAAADr//z/AAARAAoAAADr//v/AAARAAoAAADr//r/AAARAAoAAADr//n/AAARAAoAAADr//j/AAARAAoAAADr//f/AAARAAoAAADr//b/AAARAAkAAAD9/wMAAAAMAAkAAAD8/wMAAAALAAkAAAD7/wMAAAAKAAkAAAD9/wQAAAAMAAoAAAD9/wUAAAAMAA4AAAD9/wYAAAAMAA4AAAD9/wcAAAAMAA4AAAD9/wgAAAAMAA4AAAD9/wkAAAAMAA4AAAD9/woAAAAMAA4AAAD7/wQAAAAKAA4AAAD7/wUAAAAKAA4AAAD7/wYAAAAKAA4AAAD7/wcAAAAKAA4AAAD7/wgAAAAKAA4AAAD7/wkAAAAKAA4AAAD7/woAAAAKAA4AAAD7/wsAAAAKAA4AAAD7/wEAAAAGAAkAAAD7/wIAAAAGAAoAAAAAAAQAAAALABEAAAAAAAUAAAALABIAAAAAAAYAAAALABMAAAABAAQAAAAMABEAAAABAAUAAAAMABIAAAABAAYAAAAMABMAAAACAAQAAAANABEAAAACAAUAAAANABIAAAACAAYAAAANABMAAAAUAAsAAAAMAA8AAAAUAAoAAAAMAA4AAAAUAAkAAAAMAA4AAAAUAAgAAAAMAA4AAAAUAAcAAAAMAA4AAAAUAAYAAAAMAA4AAAAUAAUAAAAMAA4AAAAUAAQAAAAMAA0AAAATAAsAAAALAA8AAAATAAUAAAALAA4AAAATAAQAAAALAA0AAAASAAsAAAALAA8AAAASAAUAAAALAA4AAAASAAQAAAALAA0AAAARAAsAAAALAA8AAAARAAkAAAALAA4AAAARAAgAAAALAA4AAAARAAUAAAALAA4AAAARAAQAAAALAA0AAAAQAAsAAAALAA8AAAAQAAQAAAALAA0AAAAPAAsAAAALAA8AAAAPAAkAAAALAA4AAAAPAAQAAAALAA0AAAAOAAsAAAALAA8AAAAOAAQAAAALAA0AAAANAAsAAAALAA8AAAANAAQAAAALAA0AAAAMAAsAAAALAA8AAAAMAAQAAAALAA0AAAALAAsAAAALAA8AAAALAAkAAAALAA4AAAALAAQAAAALAA0AAAAKAAsAAAAKAA8AAAAKAAoAAAAKAA4AAAAKAAkAAAAKAA4AAAAKAAYAAAAKAA4AAAAKAAUAAAAKAA4AAAAKAAQAAAAKAA0AAAAKAAcAAAAKAA4AAAAKAAgAAAAKAA4AAADv//r/AAADAAAAAADv//v/AAADAAIAAAADAPv/AAAGAAAAAAD///z/AAAMAAAAAFD+//z/AAAMAAEAAFD9//z/AAAMAAIAAFAQAAIAAAAOAAAAAAAQAAMAAAAOAAEAAAAPAAMAAAAQAAEAAAARAAMAAAAQAAAAAAA=")
tile_set = ExtResource("2_t280y")

[node name="deathZone" parent="." instance=ExtResource("3_us6iy")]
position = Vector2(17, 268)

[node name="BG" type="Node2D" parent="."]
modulate = Color(1, 1, 1, 0.478431)

[node name="tileset" type="TileMapLayer" parent="BG"]
tile_map_data = PackedByteArray("AAD3//r/AAADAAAAAAD3//v/AAADAAEAAAD3//z/AAADAAIAAAAMAAIAAAAPAAAAAAAMAAMAAAAPAAEAAAA=")
tile_set = ExtResource("2_t280y")

[node name="fan" type="AnimatedSprite2D" parent="BG"]
position = Vector2(-251, -42)
sprite_frames = SubResource("SpriteFrames_5wy4h")
autoplay = "default"
frame_progress = 0.317956

[node name="fan2" type="AnimatedSprite2D" parent="BG"]
position = Vector2(-111, 17)
sprite_frames = SubResource("SpriteFrames_5wy4h")
autoplay = "default"
frame_progress = 0.748269

[node name="mainCanvas" parent="." instance=ExtResource("6_7gix3")]

[node name="visibleTimer" type="Timer" parent="."]
autostart = true

[node name="invisibleObjects" type="Node2D" parent="."]

[node name="Platforms" type="TileMapLayer" parent="invisibleObjects"]
tile_map_data = PackedByteArray("AAD4//3/AAAEAAEAAAD4//7/AAAEAAIAAAD5//z/AAAFAAAAAAD5//3/AAAFAAEAAAD5//7/AAAFAAIAAAD6//3/AAAGAAEAAAD6//7/AAAGAAIAAAD5//v/AAAEAAAAAAD5//r/AAAEAAAAAAAFAAAAAAAEAAEAAAAFAAEAAAAEAAIAAAAGAP//AAAFAAAAAAAGAAAAAAAFAAEAAAAGAAEAAAAFAAIAAAAHAAAAAAAGAAEAAAAHAAEAAAAGAAIAAAAGAP7/AAAEAAAAAAAGAPz/AAAEAAAAAAAGAPv/AAAEAAAAAAAGAP3/AAAEAAAAAAALAP7/AAAHAAwAAAALAP//AAAHAAwAAAALAAAAAAAHAAwAAAALAAEAAAAHAA0AAAA=")
tile_set = ExtResource("2_t280y")

[node name="trap" parent="invisibleObjects" instance=ExtResource("7_88ety")]
position = Vector2(-200, -24)

[node name="key" parent="." instance=ExtResource("8_ahbqi")]
position = Vector2(25, 56)

[node name="door" parent="." instance=ExtResource("9_7gix3")]
position = Vector2(221, 56)

[connection signal="player_died" from="player" to="." method="_on_player_player_died"]
[connection signal="player_win" from="player" to="." method="_on_player_player_win"]
[connection signal="timeout" from="visibleTimer" to="." method="_on_visible_timer_timeout"]
